# githubify-ethereum-bots-futurestack-hack

./: README.md  deploy.sh
client/: package-lock.json  package.json
client/src/app/: globals.css  layout.tsx  page.tsx
client/src/app/chat/: page.tsx
client/src/app/diagram/: page.tsx
client/src/app/visualize/: page.tsx
client/src/components/chat/: ChatMessages.tsx  ChatSidebar.tsx  MessageBubble.tsx
client/src/hooks/: useChat.ts  useGitHubUrl.ts  useNavigation.ts  useRepository.ts  useSearchParams.ts  useStreamingChat.ts
client/src/lib/: config.ts  constants.ts  markdownUtils.tsx  utils.ts
client/src/services/: localStorageService.ts  mockData.ts  repositoryService.ts  treeService.ts
client/src/types/: index.ts
prompts/: base-prompt.txt
server/: .env.sample  .gitignore  pyproject.toml  requirements.txt  tree.py
server/app/: automate.sh  main.py
server/app/agents/architect/: architecture_agent.py  architecture_diagram.py  tree_generator.py
server/app/agents/mermaid/: mermaid_generator.py
server/app/api/routes/: architect.py  query.py  repos.py  tree.py
server/app/models/: schemas.py
server/app/parser/: ast_parser.py  lang_build.py
server/app/parser/tools/: ast_chunker.py  chunking.py  indexing_tool.py
server/app/services/: ast_parser.py  cerebras_engine.py  chat_streaming_service.py  query_engine.py  repo_manager.py  semantic_cache.py  socket_server.py
server/app/services/socket/: README.md
server/app/utils/: response.py
server/app/vector_db/: vector_store.py
server/test/: test_results.json  test_system.py
(+5 files in other folders)
