[project]
name = "server"
version = "0.1.0"
description = ""
authors = [
    {name = "Prayag Bhatt",email = "prayagbhatt2003@gmail.com"}
]

requires-python = ">=3.9,<4.0" 
dependencies = [
    "fastapi (>=0.116.2,<0.117.0)",
    "uvicorn (>=0.36.0,<0.37.0)",
    "requests (>=2.32.5,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "cerebras-cloud-sdk (>=1.50.1,<2.0.0)",
    "pinecone (>=7.3.0,<8.0.0)" 
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
